# gl-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh
include/glad/: glad.h
src/: coordsys.c  glad.c  intro.c  logger.h  main.c  main.h  shader.h  texture.c  transformations.c  triangle.c  utils.h  woops.c
src/shaders/: fragment.fs  fragment2.fs  texture.fs  triangle.fs  triangle.vs  vertex.vs
